fix: search z-index

--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
-  /*--blue: #3273f5;*/
-  --blue: rgb(14, 78, 213);
+  --blue: #3273f5;
+  /*--blue: rgb(14, 78, 213);*/
   --light-blue: #3273f522;
   --dark-blue: #0063e5;
   --beige: rgb(238, 236, 226);
@@ -529,7 +529,7 @@ a.parent-link:hover:after {
 .search {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 5;
   top: 147px;
   width: 100%;
   min-width: 280px;
